force-app/main/default/objects/Order/fields/Account_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Account_Country_Code__c</fullName>
    <formula>TEXT(Account.Country_Code__c)</formula>
    <label>Account Country Code</label>
    <type>Text</type>
</CustomField>