force-app/main/default/objects/Order/fields/Billing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Code__c</fullName>
    <description>Determines the related Integration Tenant record on Order creation in the &quot;Order - Set Related Integration Tenant&quot; flow</description>
    <label>Billing Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Code_2_Digit_ISO</valueSetName>
    </valueSet>
</CustomField>