force-app/main/default/objects/Order/fields/External_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Document_Number__c</fullName>
    <label>External Document Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>