force-app/main/default/objects/Order/fields/Integration_Logic__c.field-meta.xml
<CustomField>
    <fullName>Integration_Logic__c</fullName>
    <label>Integration Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>