force-app/main/default/objects/Order/fields/Integration_Tenant__c.field-meta.xml
<CustomField>
    <fullName>Integration_Tenant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Tenant</label>
    <referenceTo>Integration_Tenant__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>