force-app/main/default/objects/Order/fields/Integration_Tenant_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Tenant_Id__c</fullName>
    <formula>Integration_Tenant__r.Tenant_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Integration Tenant Id</label>
    <type>Text</type>
</CustomField>