force-app/main/default/objects/Order/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <label>Payment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CreditCard</fullName>
                <label>CREDITCARD</label>
            </value>
            <value>
                <fullName>Check</fullName>
                <label>CHECK</label>
            </value>
            <value>
                <fullName>Stripe-AU</fullName>
                <label>STRIPE-AU</label>
            </value>
            <value>
                <fullName>Stripe-NZ</fullName>
                <label>STRIPE-NZ</label>
            </value>
            <value>
                <fullName>EFT-BANK</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>PchaseOrdr</fullName>
            </value>
            <value>
                <fullName>Offline</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>