force-app/main/default/objects/Order/fields/Shipping_Agent_Code_Courier__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Agent_Code_Courier__c</fullName>
    <label>Shipping Agent Code (Courier)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DHL</fullName>
            </value>
            <value>
                <fullName>DHLEXP</fullName>
            </value>
            <value>
                <fullName>ELECTRONIC</fullName>
            </value>
            <value>
                <fullName>FEDEX</fullName>
            </value>
            <value>
                <fullName>UPS</fullName>
            </value>
            <value>
                <fullName>USPS</fullName>
            </value>
            <value>
                <fullName>WILL_CALL</fullName>
                <label>WILL CALL</label>
            </value>
            <value>
                <fullName>AUPOST</fullName>
            </value>
            <value>
                <fullName>COURIER</fullName>
            </value>
            <value>
                <fullName>OWN LOG.</fullName>
            </value>
            <value>
                <fullName>PACKSEND</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>