force-app/main/default/objects/Order/fields/Shipping_Agent_Service_Code_Priority__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Agent_Service_Code_Priority__c</fullName>
    <label>Shipping Agent Service Code (Priority)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Shipping_Agent_Code_Courier__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2 DAY GRND</fullName>
            </value>
            <value>
                <fullName>2DAY</fullName>
            </value>
            <value>
                <fullName>2DAYAM</fullName>
            </value>
            <value>
                <fullName>3DAY</fullName>
            </value>
            <value>
                <fullName>EXPRESS</fullName>
            </value>
            <value>
                <fullName>EXPSAVER</fullName>
            </value>
            <value>
                <fullName>FRSTOVN</fullName>
            </value>
            <value>
                <fullName>GND</fullName>
            </value>
            <value>
                <fullName>GNDHOME</fullName>
            </value>
            <value>
                <fullName>INTECON</fullName>
            </value>
            <value>
                <fullName>INTFRST</fullName>
            </value>
            <value>
                <fullName>INTPRIO</fullName>
            </value>
            <value>
                <fullName>PRIOOVN</fullName>
            </value>
            <value>
                <fullName>SMARTPOST</fullName>
            </value>
            <value>
                <fullName>STDOVN</fullName>
            </value>
            <value>
                <fullName>BBECON</fullName>
            </value>
            <value>
                <fullName>BBEXP</fullName>
            </value>
            <value>
                <fullName>DECONSEL</fullName>
            </value>
            <value>
                <fullName>DEXP1030</fullName>
            </value>
            <value>
                <fullName>DEXP1200</fullName>
            </value>
            <value>
                <fullName>DEXP900</fullName>
            </value>
            <value>
                <fullName>ECONSEL</fullName>
            </value>
            <value>
                <fullName>ECONSELND</fullName>
            </value>
            <value>
                <fullName>EUPAK</fullName>
            </value>
            <value>
                <fullName>EUPAKND</fullName>
            </value>
            <value>
                <fullName>EXP1030</fullName>
            </value>
            <value>
                <fullName>EXP1030ND</fullName>
            </value>
            <value>
                <fullName>EXP1200</fullName>
            </value>
            <value>
                <fullName>EXP1200ND</fullName>
            </value>
            <value>
                <fullName>EXP900</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>