force-app/main/default/objects/Order/fields/Training_Event__c.field-meta.xml
<CustomField>
    <fullName>Training_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to related Training Event</description>
    <label>Training Event</label>
    <referenceTo>Training_Event__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>