force-app/main/default/objects/Order/fields/Venue_Code__c.field-meta.xml
<CustomField>
    <fullName>Venue_Code__c</fullName>
    <label>Venue Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACCHARLOTT</fullName>
            </value>
            <value>
                <fullName>ACMPATL</fullName>
            </value>
            <value>
                <fullName>ACMPDC</fullName>
            </value>
            <value>
                <fullName>ACMPHI</fullName>
            </value>
            <value>
                <fullName>ACMPMDWST</fullName>
            </value>
            <value>
                <fullName>ACMPNC</fullName>
            </value>
            <value>
                <fullName>ACMPNORCAL</fullName>
            </value>
            <value>
                <fullName>ACMPPHILLY</fullName>
            </value>
            <value>
                <fullName>ACMPPNW</fullName>
            </value>
            <value>
                <fullName>ACMPSOCAL</fullName>
            </value>
            <value>
                <fullName>ACMPTN</fullName>
            </value>
            <value>
                <fullName>ACMPTX</fullName>
            </value>
            <value>
                <fullName>ACMPUTAH</fullName>
            </value>
            <value>
                <fullName>AIRLIE</fullName>
            </value>
            <value>
                <fullName>ALTMTL</fullName>
            </value>
            <value>
                <fullName>ALTSTJOHN</fullName>
            </value>
            <value>
                <fullName>BREWCRK</fullName>
            </value>
            <value>
                <fullName>BUILDBLKS</fullName>
            </value>
            <value>
                <fullName>CAHIGHED</fullName>
            </value>
            <value>
                <fullName>CANCHARLTT</fullName>
            </value>
            <value>
                <fullName>CANOPYTOR</fullName>
            </value>
            <value>
                <fullName>CARLTON</fullName>
            </value>
            <value>
                <fullName>CHARTR-SEA</fullName>
            </value>
            <value>
                <fullName>CHATEAU-GA</fullName>
            </value>
            <value>
                <fullName>CHATEAUMONT</fullName>
            </value>
            <value>
                <fullName>CSUFRESNO</fullName>
            </value>
            <value>
                <fullName>CSULGBCH</fullName>
            </value>
            <value>
                <fullName>DBLTREEAZ</fullName>
            </value>
            <value>
                <fullName>DELAWARE</fullName>
            </value>
            <value>
                <fullName>DENMARRIOT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>