force-app/main/default/objects/Order/fields/VILT__c.field-meta.xml
<CustomField>
    <fullName>VILT__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Virtual Instructor Led Training</inlineHelpText>
    <label>VILT</label>
    <type>Checkbox</type>
</CustomField>